chris-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: chris-store
  name: chris-store
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chris-store
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/local: "true"
        io.kompose.service: chris-store
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: chris-store-db-service
            - name: DATABASE_PORT
              value: "5432"
            - name: DJANGO_ALLOWED_HOSTS
              value: '*'
            - name: DJANGO_CORS_ORIGIN_ALLOW_ALL
              value: "true"
            - name: DJANGO_CORS_ORIGIN_WHITELIST
              value: babymri.org
            - name: DJANGO_DB_MIGRATE
              value: "on"
            - name: DJANGO_SECRET_KEY
              value: secret
            - name: DJANGO_SECURE_PROXY_SSL_HEADER
            - name: DJANGO_SETTINGS_MODULE
              value: config.settings.production
            - name: DJANGO_USE_X_FORWARDED_HOST
              value: "false"
            - name: POSTGRES_DB
              value: chris_store
            - name: POSTGRES_PASSWORD
              value: chirs1234
            - name: POSTGRES_USER
              value: chris
            - name: SWIFT_AUTH_URL
              value: http://swift:8080/auth/v1.0
            - name: SWIFT_CONTAINER_NAME
              value: store_users
            - name: SWIFT_KEY
              value: testing
            - name: SWIFT_USERNAME
              value: chris:chris1234
          image: ghcr.io/fnndsc/chris_store:2.0.1
          name: chris-store
          ports:
            - containerPort: 8010
          resources: {}
      restartPolicy: Always
status: {}
