chris-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: chris-ui
  name: chris-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chris-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: chris-ui
    spec:
      containers:
        - args:
            - sirv
            - --quiet
            - --single
          image: ghcr.io/fnndsc/chris_ui:20220304
          name: chris-ui-deployment
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
