queue-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      name: queue
  template:
    metadata:
      labels:
        name: queue
    spec:
      containers:
        - name: queue
          image: rabbitmq
          ports:
          - containerPort: 5672
