worker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/local: "true"
    io.kompose.service: worker
  name: worker
spec:
  containers:
    - args:
        - celery
        - -A
        - core
        - worker
        - -c
        - "4"
        - -l
        - info
        - -Q
        - main1,main2
      image: fnndsc/cube:next-3.0.0.a2.git.ba5ff6f
      name: worker
      resources: {}
  restartPolicy: OnFailure
status: {}
