chris-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
    org.chrisproject.miniChRIS: miniChRIS
    org.chrisproject.role: ChRIS ultron backEnd
  creationTimestamp: null
  labels:
    io.kompose.service: chris
  name: chris
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: chris
status:
  loadBalancer: {}
