chris-store-db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: chris-store-db-service
spec:
  selector:
    app: chris-store-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
