chris_store-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: chris-store
  name: chris-store-service
spec:
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8010
  selector:
    io.kompose.service: chris-store
status:
  loadBalancer: {}
