pfcon-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/prakash/openSource/miniChris-prakash/miniChRIS/miniChrisK8s
    kompose.version: 1.26.0 (40646f47)
    org.chrisproject.role: pfcon
  creationTimestamp: null
  labels:
    io.kompose.service: pfcon
  name: pfcon
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
  selector:
    io.kompose.service: pfcon
status:
  loadBalancer: {}
