queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
  - port: 5672
  selector:
    name: queue
