scheduler-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: scheduler-service
spec:
  selector:
    app: scheduler
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
