worker-periodic-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: worker-periodic-service
spec:
  selector:
    app: worker-periodic
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
