worker-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: worker-service
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
